Wed Oct 10 16:07:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* utils/install_dependencies.py,utils/log2cl.py: Tidy up a couple
	  of comments.

Wed Oct 10 10:36:51 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/templates/collection_detail.html,src/templates.py: FIXES:
	  http://code.google.com/p/flaxcode/issues/detail?id=13 Made the UI
	  for the oldest property a dropdown.

Wed Oct 10 08:41:12 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/flax.py: FIXES:
	  http://code.google.com/p/flaxcode/issues/detail?id=12 Added rtf
	  to list of formats.

Wed Oct 10 08:38:08 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/filespec.py,src/templates/collection_detail.html,
	  src/templates/search.html,src/templates.py: FIXES:
	  http://code.google.com/p/flaxcode/issues/detail?id=13 Removed all
	  the date related stuff from filespecs except for the "oldest"
	  property. FIXES:
	  http://code.google.com/p/flaxcode/issues/detail?id=9 Added a
	  definition list to search forms giving collection names and
	  descriptions.

Wed Oct 10 08:06:56 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/flaxlog.conf: FIXES:
	  http://code.google.com/p/flaxcode/issues/detail?id=26 Added
	  searching to the the keys attribute of the loggers section.

Tue Oct 09 17:35:16 UTC 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/htmltotext/ChangeLog,libs/htmltotext/src/pyhtmltotext.cc:
	  src/pyhtmltotext.cc: Don't use a zero size array - MSVC doesn't
	  like it.

Tue Oct 09 14:08:00 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/cpserver.py,src/templates/collection_detail.html,
	  src/templates/collections.html,src/templates.py: FIXES:
	  http://code.google.com/p/flaxcode/issues/detail?id=10 Removed the
	  form on the collection listing page, added a new link for
	  creating a collection. Changed the detail form to cope with
	  updating or creation.

Tue Oct 09 10:10:49 UTC 2007  Paul Rudin <paul@rudin.co.uk>

	* src/dbspec.py,src/indexserver/indexer.py: FIXES: