@@ -1,26 +1,64 @@
-#$Id:$
-# standard modules
-import os
+# Copyright (C) 2007 Lemur Consulting Ltd
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program; if not, write to the Free Software Foundation, Inc.,
+# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+"""Database configuration and field specification.
+
+"""
+__docformat__ = "restructuredtext en"
+
 import setuppaths
+import os
 import xappy
 
 class DBSpec(object):
+    """This class describes the configuration for a database.
+
+    The configuration specifies how databases should be created, and provides a
+    method for creating the database with the appropriate configuration.
+
+    This class should be subclassed by an object describing a source of data
+    to be indexed.
+
     """
-    Specifies how indexing of a document collection should take place.
 
-    This includes information about both database creation, and (re)-indexing.
-
-    """
-
-    _stopwords = ['i', 'a', 'an', 'and', 'the']
+    _default_stopwords = ['i', 'a', 'an', 'and', 'the']
 
 
-    def update(self, language = "en", stopwords = _stopwords, **kwargs):
+    def update(self, language="en", stopwords=_default_stopwords, **kwargs):
+        """Update the configuration:
+
+         - `language` specifies the language to be used for a database.
+           Currently, this applies to all free-text fields.
+         - `stopwords` specifies the stopwords to be used for a database.
+
+        """
         self.language = language
-        self.stopwords = stopwords if isinstance(stopwords, list) else stopwords.split(" ")
+
+        if isinstance(stopwords, types.StringTypes):
+            stopwords = stopwords.split(" ")
+        self.stopwords = list(stopwords)
+
         self.maybe_make_db()
 
     def dbname(self):
+        """This method must return a path to the database.
+
+        FIXME - rename to dbpath, dbname implies that only the basename needs
+        to be returned.
+
+        """
         raise NotImplementedError, "Subclasses must implement dbname"
 
 
@@ -59,5 +97,3 @@ class DBSpec(object):
             conn.add_field_action('content', xappy.FieldActions.INDEX_FREETEXT, **free_text_options)
             conn.add_field_action('content', xappy.FieldActions.STORE_CONTENT)
             conn.close()
-
-    
